@@ -34,13 +34,12 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
-import static org.apache.commons.lang.RandomStringUtils.randomAlphanumeric;
 import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
+import static org.apache.commons.lang3.RandomStringUtils.randomAlphanumeric;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static uk.gov.hmcts.reform.professionalapi.controller.request.NewUserCreationRequest.aNewUserCreationRequest;
 import static uk.gov.hmcts.reform.professionalapi.util.DateUtils.convertStringToLocalDate;
 import static uk.gov.hmcts.reform.professionalapi.util.DateUtils.formatDateString;
 
@@ -204,14 +203,13 @@ public class AuthorizationFunctionalTest {
         userAccessTypes.add(new UserAccessType("jurisdictionId" + random, "organisationProfileId" + random,
                 "accessTypeId" + random, false));
         String userEmail = generateRandomEmail();
-        NewUserCreationRequest userCreationRequest = aNewUserCreationRequest()
+        return NewUserCreationRequest.aNewUserCreationRequest()
                 .firstName(firstName)
                 .lastName(lastName)
                 .email(userEmail)
                 .roles(userRoles)
                 .userAccessTypes(userAccessTypes)
                 .build();
-        return userCreationRequest;
     }
 
     protected NewUserCreationRequest createUserRequest(List<String> userRoles, boolean hasAccessTypes) {
@@ -227,7 +225,7 @@ public class AuthorizationFunctionalTest {
                     .add(new UserAccessType("testJurisdictionId",
                             "testOrganisationProfileId",
                             "testAccessTypeId", true));
-            userCreationRequest = aNewUserCreationRequest()
+            userCreationRequest = NewUserCreationRequest.aNewUserCreationRequest()
                     .firstName(firstName)
                     .lastName(lastName)
                     .email(userEmail)
@@ -235,7 +233,7 @@ public class AuthorizationFunctionalTest {
                     .userAccessTypes(userAccessTypes)
                     .build();
         } else {
-            userCreationRequest = aNewUserCreationRequest()
+            userCreationRequest = NewUserCreationRequest.aNewUserCreationRequest()
                     .firstName(firstName)
                     .lastName(lastName)
                     .email(userEmail)
@@ -404,9 +402,9 @@ public class AuthorizationFunctionalTest {
             assertEquals(true, userAccessTypeList.get(0).get("enabled"));
         }
 
-        HashMap userMap = professionalUsersResponses.get(0);
+        HashMap userMap = professionalUsersResponses.getFirst();
         assertThat(userMap).isNotEmpty();
-        validateUserResponse(userMap, searchResponse);
+        validateUserResponse(userMap, searchResponse, expectedStatus);
 
         if (rolesReturned) {
             assertThat(userMap.get("roles")).isNotNull();
@@ -428,7 +426,7 @@ public class AuthorizationFunctionalTest {
 
         HashMap userMap = professionalUsersResponses.get(0);
         assertThat(userMap).isNotEmpty();
-        validateUserResponse(userMap, searchResponse);
+        validateUserResponse(userMap, searchResponse, "ACTIVE");
         assertThat(userAccessTypeList).hasSize(2);
 
         if (rolesReturned) {
@@ -439,7 +437,7 @@ public class AuthorizationFunctionalTest {
         }
     }
 
-    public void validateUserResponse(HashMap userMap, Map<String, Object> searchResponse) {
+    public void validateUserResponse(HashMap userMap, Map<String, Object> searchResponse, String expectedStatus) {
         assertThat(searchResponse.get("users")).asList().isNotEmpty();
         assertThat(searchResponse.get("organisationIdentifier")).isNotNull();
         assertThat(searchResponse.get("organisationProfileIds")).isNotNull();
@@ -449,7 +447,7 @@ public class AuthorizationFunctionalTest {
         assertThat(userMap.get("lastName")).isNotNull();
         assertThat(userMap.get("email")).isNotNull();
         assertThat(userMap.get("lastUpdated")).isNotNull();
-        assertThat(userMap.get("idamStatus").equals(IdamStatus.ACTIVE.name()));
+        assertThat(userMap.get("idamStatus")).isEqualTo(expectedStatus);
     }
 
     public UserProfileUpdatedData deleteRoleRequest(String role) {
@@ -556,12 +554,13 @@ public class AuthorizationFunctionalTest {
 
         for (Map user : professionalUsersResponses) {
             HashMap<String, String> orgInfo = (HashMap<String, String>) user.get("organisationInfo");
+            //assert organisation status
+            assertThat(orgInfo.get("status")).isEqualToIgnoringCase("ACTIVE");
+
             assertThat(orgInfo).isNotNull();
             String userStatus = orgInfo.get("status");
             assertThat(userStatus).isNotNull();
-            if (userStatus.equalsIgnoreCase(IdamStatus.ACTIVE.name())) {
-                assertThat(user.get("userIdentifier")).isNotNull();
-            }
+            assertThat(user.get("userIdentifier")).isNotNull();
             assertThat(user.get("lastUpdated")).isNotNull();
             String lastUpdated = (String) user.get("lastUpdated");
             lastUpdated = formatDateString(lastUpdated);
